# azurepim

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  config.toml
.claude/commands/: analyze.md  gpt5-analyze.md  gpt5.md  ria.md
.claude/skills/docs-markdown/: SKILL.md
.claude/skills/observability/: SKILL.md
.claude/skills/rust/: SKILL.md
.claude/skills/security/: SKILL.md
.claude/skills/user-flow/: SKILL.md
docs/: azure-app-registration.md  phase2-pim-spec.md  spec.md
scripts/: run.sh
src/: config.rs  error.rs  main.rs  settings.rs
src/app/: delegate.rs  mod.rs
src/auth/: callback_server.rs  graph.rs  mod.rs  oauth.rs  token_manager.rs
src/keychain/: mod.rs  secure.rs
src/menubar/: builder.rs  delegate.rs  mod.rs  state.rs  updates.rs
src/pim/: cache.rs  client.rs  mod.rs  models.rs  settings.rs
