[package]
name = "azurepim"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "macOS menu bar application for Azure authentication management"
authors = ["Sven Malvik <sven.malvik@vipps.no>"]
license = "MIT"

[[bin]]
name = "azurepim"
path = "src/main.rs"

[dependencies]
# macOS Integration (objc2)
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = [
    "NSData", "NSString", "NSThread", "NSObject",
    "NSOperation", "NSAttributedString", "NSRange",
    "NSDictionary", "NSURL", "NSArray", "NSError",
    "NSRunLoop", "NSDate"
] }
objc2-app-kit = { version = "0.2", features = [
    "NSApplication", "NSMenu", "NSMenuItem", "NSRunningApplication",
    "NSStatusBar", "NSStatusBarButton", "NSStatusItem",
    "NSImage", "NSPasteboard", "NSEvent", "NSWorkspace", "NSCell", "NSControl",
    "NSResponder", "NSView", "NSButton"
] }
block2 = "0.5"
dispatch = "0.2"

# macOS Keychain
security-framework = "2.9"

# Async Runtime & HTTP
tokio = { version = "1", features = ["full", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# OAuth2
oauth2 = "4.4"
url = "2.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error Handling & Logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1.19"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
open = "5.0"
urlencoding = "2.1"

# Security
zeroize = { version = "1.7", features = ["derive"] }

[build-dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
strip = true
